sonarqube.yml
apiversion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarqube
    name: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:9.5.0-community
          ports:
            - containerPort: 9000
              protocol: TCP
          volumeMounts:
            - mountPath: "/opt/sonarqube/data/"
              name: sonar-data
      volumes:
        - name: sonar-data
          hostPath:
          type: DirectoryOrCreate
          path: "/opt/sonarqube/data/"

---
apiVersion: v1
kind: Service
etadata:
  labels:
    app: sonarqube
    name: sonarqube
spec:
  ports:
    - name: sonar
      port: 9000
      protocol: TCP
      targetPort: 9000
      nodePort: 30012
  selector:
    app: sonarqube
  type: NodePort
